<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMovieActivity">

    <EditText
        android:id="@+id/Text_Name"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/editText_movieName"
        android:maxLength="50"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/Description_label"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/Text_Name"
        app:layout_constraintTop_toBottomOf="@+id/Text_Name" />

    <EditText
        android:id="@+id/scrollView"
        android:layout_width="380dp"
        android:layout_height="98dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="1000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView_Description"
        app:layout_constraintTop_toBottomOf="@+id/textView_Description" />

    <TextView
        android:id="@+id/textView2_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/genre_textView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView_Description"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <Spinner
        android:id="@+id/spinner_genreDropDown"
        android:layout_width="285dp"
        android:layout_height="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toEndOf="@+id/textView2_genre"
        app:layout_constraintTop_toTopOf="@+id/textView2_genre" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/rating_textView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView2_genre"
        app:layout_constraintTop_toBottomOf="@+id/textView2_genre" />

    <SeekBar
        android:id="@+id/seekBar_Rating"
        android:layout_width="270dp"
        android:layout_height="21dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner_genreDropDown"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <EditText
        android:id="@+id/editText3_Year"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/year_label"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/seekBar_Rating" />

    <EditText
        android:id="@+id/editText4_ImdbLink"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="IMDB Link"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editText3_Year"
        app:layout_constraintStart_toStartOf="@+id/editText3_Year"
        app:layout_constraintTop_toBottomOf="@+id/editText3_Year" />

    <Button
        android:id="@+id/button_finish"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:text="@string/addMovie_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4_ImdbLink"
        app:layout_constraintVertical_bias="0.841" />

    <TextView
        android:id="@+id/rate"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/seekBar_Rating"
        app:layout_constraintTop_toTopOf="@+id/seekBar_Rating" />

</androidx.constraintlayout.widget.ConstraintLayout>